--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta name="title" content="Medosi | A Whole Spectrum Health Company">
   <meta name="description" content="We came to whole spectrum health through genuine, personal needs. Shop with Medosi today. Our online store is now available!">
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
  </head>
