--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <title>Welcome to Medosi</title>
   <meta name="title" content="Medosi | A Whole Spectrum Health Company">
   <meta name="description" content="We came to whole spectrum health through genuine, personal needs. Shop with Medosi today. Our online store is now available!">
   <link rel="stylesheet" type="text/css" href="style.css"/>
