--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
  </head>
  <body>
-  <div align="center"><img src="medosi/medosi.png"></div>
+  <div align="center"><img src="/medosi/medosi.png"></div>
   <h1 style="font-family: 'Roboto', sans-serif;">Welcome to <a href="https://medosi.com/">Medosi</a></h1>
   <p style="font-family: 'Roboto', sans-serif;">We're not a CBD company. We built our company to be unlike any other because our approach is unlike any other. While other companies talk about CBD, our conversations are grounded in the whole hemp plant – a concept we call whole spectrum health. The whole plant is better than the sum of its parts – and to us, that makes a whole lot of sense.</p>
  </body>
